--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,9 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
+}
 
 @layer base {
   :root {
@@ -69,4 +72,5 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+
 }
